Use citrus.version property in sources

--- a/src/main/site/index.html
+++ b/src/main/site/index.html
@@ -12,7 +12,7 @@ overview: true
       <p>Automated integration tests for message protocols and data formats!<br>
         HTTP REST, JMS, TCP/IP, SOAP, FTP, SSH, XML, JSON and more!</p>
 
-      <a href="${site.path}docs/download" class="btn btn-primary">Download v${project.version}</a>
+      <a href="${site.path}docs/download" class="btn btn-primary">Download v${citrus.version}</a>
     </div>
   </div>
 </section>
@@ -111,7 +111,7 @@ overview: true
       <p>The reference documentation material for the latest Citrus release is available as online HTML
         or offline PDF version.</p>
       <p><strong>Latest stable release:</strong><br>
-        Version ${project.version}: <a href="${site.path}reference/html/index.html" target="_blank">HTML</a> | <a href="${site.path}reference/pdf/citrus-reference-${project.version}.pdf" target="_blank">PDF</a>
+        Version ${citrus.version}: <a href="${site.path}reference/html/index.html" target="_blank">HTML</a> | <a href="${site.path}reference/pdf/citrus-reference-${citrus.version}.pdf" target="_blank">PDF</a>
       </p>
     </div>
     <div class="unit one-third">
