--- a/src/main/site/index.html
+++ b/src/main/site/index.html
@@ -12,7 +12,7 @@ overview: true
       <p>Automated integration tests for message protocols and data formats!<br>
         HTTP REST, JMS, TCP/IP, SOAP, FTP, SSH, XML, JSON and more!</p>
 
-      <a href="${site.path}docs/download" class="btn btn-primary">Download v${citrus.version}</a>
+      <a href="${site.path}/docs/download" class="btn btn-primary">Download v${citrus.version}</a>
     </div>
   </div>
 </section>
@@ -23,7 +23,7 @@ overview: true
       <h1>Integration challenge</h1>
       <h2><small>How Citrus works with automated tests</small></h2>
 
-      <img src="${site.path}img/test-scenario.png" alt="Test Scenario">
+      <img src="${site.path}/img/test-scenario.png" alt="Test Scenario">
 
       <p>In a typical test scenario the system under test is deployed on some application server and interacts with
         Citrus over various message transports. During the test run Citrus is able to act on both sides as client and/or
@@ -97,21 +97,21 @@ overview: true
         <li><strong>Message transport connectivity:</strong> HTTP, JMS, TCP/IP, REST, SOAP, XML, JSON, and more</li>
         <li><strong>Validation:</strong> message header and body assertions</li>
       </ul>
-      <p>See the complete <a href="${site.path}docs/features">feature list &rarr;</a> for details.</p>
+      <p>See the complete <a href="${site.path}/docs/features">feature list &rarr;</a> for details.</p>
     </div>
     <div class="unit one-third">
       <h2>Documentation</h2>
       <p>See the following reading material and information on Citrus testing.</p>
       <ul>
-        <li><a href="${site.path}docs/home/">Documentation</a></li>
+        <li><a href="${site.path}/docs/home/">Documentation</a></li>
         <li><a href="http://labs.consol.de/tags/citrus" target="_blank">Blog</a></li>
-        <li><a href="${site.path}apidocs/index.html" target="_blank">Java API</a></li>
+        <li><a href="${site.path}/apidocs/index.html" target="_blank">Java API</a></li>
         <li><a href="http://www.github.com/christophd/citrus" target="_blank">Java Sources</a></li>
       </ul>
       <p>The reference documentation material for the latest Citrus release is available as online HTML
         or offline PDF version.</p>
       <p><strong>Latest stable release:</strong><br>
-        Version ${citrus.version}: <a href="${site.path}reference/html/index.html" target="_blank">HTML</a> | <a href="${site.path}reference/pdf/citrus-reference-${citrus.version}.pdf" target="_blank">PDF</a>
+        Version ${citrus.version}: <a href="${site.path}/reference/html/index.html" target="_blank">HTML</a> | <a href="${site.path}/reference/pdf/citrus-reference-${citrus.version}.pdf" target="_blank">PDF</a>
       </p>
     </div>
     <div class="unit one-third">
