Move repository ownership to citrusframework

--- a/src/main/site/projects/index.html
+++ b/src/main/site/projects/index.html
@@ -16,7 +16,7 @@ permalink: /projects/
       </span>
 
       <div class="right">
-        <a href="https://github.com/christophd/citrus" target="_blank">
+        <a href="https://github.com/citrusframework/citrus" target="_blank">
           <i class="fa fa-pencil"></i>&nbsp;View source code
         </a>
       </div>
@@ -25,7 +25,7 @@ permalink: /projects/
       One single test is able to act as both client and server on several messaging interfaces. Citrus provides strong validation of XML, Json and plaintext message content and integrates with Spring features such as
       security, database connectivity, producer and consumer templates.</p>
 
-      <a href="http://christophd.github.io/citrus/" target="_blank"><i class="fa fa-text-o"></i>&nbsp;&nbsp;View Documentation</a>
+      <a href="http://citrusframework.github.io/citrus/" target="_blank"><i class="fa fa-text-o"></i>&nbsp;&nbsp;View Documentation</a>
     </div>
   </div>
   <hr>
@@ -39,7 +39,7 @@ permalink: /projects/
       </span>
 
       <div class="right">
-        <a href="https://github.com/christophd/citrus-admin" target="_blank">
+        <a href="https://github.com/citrusframework/citrus-admin" target="_blank">
           <i class="fa fa-pencil"></i>&nbsp;View source code
         </a>
       </div>
@@ -47,7 +47,7 @@ permalink: /projects/
       <p>Web-based user interface for managing Citrus projects and test cases. You can open Citrus projects, review the Spring bean configuration as well as the Citrus components. Also you can view and start tests with
       detailed reporting as outcome.</p>
 
-      <a href="http://christophd.github.io/citrus-admin/" target="_blank"><i class="fa fa-text-o"></i>&nbsp;&nbsp;View Documentation</a>
+      <a href="http://citrusframework.github.io/citrus-admin/" target="_blank"><i class="fa fa-text-o"></i>&nbsp;&nbsp;View Documentation</a>
     </div>
   </div>
   <hr>
@@ -61,7 +61,7 @@ permalink: /projects/
       </span>
 
       <div class="right">
-        <a href="https://github.com/christophd/citrus-simulator" target="_blank">
+        <a href="https://github.com/citrusframework/citrus-simulator" target="_blank">
           <i class="fa fa-pencil"></i>&nbsp;View source code
         </a>
       </div>
@@ -69,7 +69,7 @@ permalink: /projects/
       <p>Simulates any 3rd party interface as client and/or server. Typically used in acceptance test environments where a foreign service partner is simply not available. Users can explore a software during manual acceptance tests while
         each incoming request on the simulator triggers a defined scenario that creates a proper response message.</p>
 
-      <a href="http://christophd.github.io/citrus-simulator/" target="_blank"><i class="fa fa-text-o"></i>&nbsp;&nbsp;View Documentation</a>
+      <a href="http://citrusframework.github.io/citrus-simulator/" target="_blank"><i class="fa fa-text-o"></i>&nbsp;&nbsp;View Documentation</a>
     </div>
   </div>
   <hr>
