--- a/src/main/site/index.html
+++ b/src/main/site/index.html
@@ -106,7 +106,7 @@ overview: true
         <li><a href="${site.path}/docs/home/">Documentation</a></li>
         <li><a href="http://labs.consol.de/tags/citrus" target="_blank">Blog</a></li>
         <li><a href="${site.path}/apidocs/index.html" target="_blank">Java API</a></li>
-        <li><a href="http://www.github.com/christophd/citrus" target="_blank">Java Sources</a></li>
+        <li><a href="http://www.github.com/citrusframework/citrus" target="_blank">Java Sources</a></li>
       </ul>
       <p>The reference documentation material for the latest Citrus release is available as online HTML
         or offline PDF version.</p>
