--- a/src/main/site/redirects/github.html
+++ b/src/main/site/redirects/github.html
@@ -1,4 +1,4 @@
 ---
 permalink: /github.html
-redirect_to: https://github.com/christophd/citrus
+redirect_to: https://github.com/citrusframework/citrus
 ---
