--- a/src/main/site/index.html
+++ b/src/main/site/index.html
@@ -55,10 +55,27 @@ overview: true
 <section class="intro">
   <div class="grid">
     <div class="unit whole align-center">
+      <h1>BDD Integration with Citrus & Cucumber</h1>
+      <h2><small>Citrus "Tools in action" session @DevoxxBE 2017</small></h2>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/X76Wz0MNdrc" frameborder="0" allowfullscreen></iframe>
+
+      <p>The concept of behavior driven development (BDD) is quite simple. Business analysts and domain experts describe how the application should behave using Gherkin (given-when-then) feature stories.
+        Developers glue those specifications to automated tests. Can we use this approach when testing the integration of services, too? The talk gives answers with a combination of the frameworks Cucumber and Citrus.
+        After a short introduction to both frameworks we discuss the concepts and see some code examples that demonstrate how the behavior driven approach fits to testing the messaging integration with Http REST, JMS and mail communication.
+        At the end we will have an automated integration test with BDD and almost no glue code to write manually.</p>
+    </div>
+  </div>
+  <hr>
+</section>
+
+<section class="intro">
+  <div class="grid">
+    <div class="unit whole align-center">
       <h1>Citrus & Cucumber BDD</h1>
       <h2><small>Citrus "Tools in action" session @DevoxxUS 2017</small></h2>
 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/jNgROZjI98Y" frameborder="0" allowfullscreen="true"></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/jNgROZjI98Y" frameborder="0" allowfullscreen></iframe>
 
       <p>The concept of behavior driven development (BDD) is quite simple. Business analysts and domain experts describe how the application
         should behave using Gherkin (given-when-then) feature stories. Developers glue those specifications to automated tests. The talk
@@ -75,7 +92,7 @@ overview: true
       <h1>Testing Microservices</h1>
       <h2><small>Citrus "Tools in action" session @DevoxxBE 2015</small></h2>
 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/FPgXJveaLTo" frameborder="0" allowfullscreen="true"></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/FPgXJveaLTo" frameborder="0" allowfullscreen></iframe>
 
       <p>Citrus integrates with frameworks like Apache Camel, Arquillian, Kubernetes and Docker in order to provide
         automated integration testing of Microservice applications. The tools in action session gives a brief introduction
