Improved samples github links

--- a/src/main/site/samples/index.html
+++ b/src/main/site/samples/index.html
@@ -33,7 +33,7 @@ sample: sample-overview
         <tr>
           <td><a href="{{ post.permalink }}">{{ post.sample }}</a></td>
           <td align="center">{{ post.description }}</td>
-          <td align="center"><a href="https://github.com/citrusframework/citrus-samples/blob/master/{{ post.sample }}" target="_blank"><i class="fa fa-pencil"></i></a></td>
+          <td align="center"><a href="https://github.com/citrusframework/citrus-samples/blob/master/{{ post.sources }}" target="_blank"><i class="fa fa-pencil"></i></a></td>
         </tr>
         {% endfor %}
       </tbody>
