Fixed link to pdf reference on index.html

--- a/src/main/site/index.html
+++ b/src/main/site/index.html
@@ -128,7 +128,7 @@ overview: true
       <p>The reference documentation material for the latest Citrus release is available as online HTML
         or offline PDF version.</p>
       <p><strong>Latest stable release:</strong><br>
-        Version ${citrus.version}: <a href="${context.path}/reference/html/index.html" target="_blank">HTML</a> | <a href="${context.path}/reference/pdf/citrus-reference-${citrus.version}.pdf" target="_blank">PDF</a>
+        Version ${citrus.version}: <a href="${context.path}/reference/html/index.html" target="_blank">HTML</a> | <a href="${context.path}/citrus/reference/${citrus.version}/pdf/citrus-reference-${citrus.version}.pdf" target="_blank">PDF</a>
       </p>
     </div>
     <div class="unit one-third">
