chore: Refactor documentation page structure

--- a/src/main/site/index.html
+++ b/src/main/site/index.html
@@ -12,7 +12,7 @@ overview: true
       <p>Framework for automated integration tests supporting a wide range of message protocols and data formats!<br>
         Kafka, Http REST, JMS, TCP/IP, SOAP, FTP/SFTP, SSH, XML, Json and much more!</p>
 
-      <a href="https://github.com/citrusframework/citrus/releases" class="btn btn-primary">Release v${citrus.version}</a>
+      <a href="${context.path}/docs/download" class="btn btn-primary">Release v${citrus.version}</a>
     </div>
   </div>
 </section>
@@ -139,7 +139,7 @@ overview: true
       <h2>Documentation</h2>
       <p>See the following reading material and information on Citrus testing.</p>
       <ul>
-        <li><a href="${context.path}/docs/home/">Documentation</a></li>
+        <li><a href="${context.path}/docs/documentation/">Documentation</a></li>
         <li><a href="http://labs.consol.de/tags/citrus" target="_blank">Blog</a></li>
         <li><a href="${context.path}/apidocs/index.html" target="_blank">Java API</a></li>
         <li><a href="http://www.github.com/citrusframework/citrus" target="_blank">Java Sources</a></li>
