--- a/src/main/site/index.html
+++ b/src/main/site/index.html
@@ -39,6 +39,25 @@ overview: true
 <section class="intro">
   <div class="grid">
     <div class="unit whole align-center">
+      <h1>Testing Kamelets - Verify event sources and sinks with YAKS</h1>
+      <h2><small>Presentation from ApacheCon 2021</small></h2>
+
+      <iframe width="560" height="315" src="https://youtu.be/mIfmMFOgdbI" frameborder="0" allowfullscreen></iframe>
+
+      <p>Kamelets represent Camel-K route snippets that act as standardized event sources and sinks in an event driven architecture. Kamelets provide a simple interface that hides the individual
+        implementation details and allows the user to connect to external systems with simply providing some required properties. YAKS is a test automation tool that provides special support for
+        Camel-K, Kamelets and other technologies such as Knative, Apache Kafka, OpenAPI 3, Http REST, JMS, and many more. The presentation shows how to write automated integration tests for Kamelets
+        with YAKS in order to run those tests as part of Kubernetes. The talk begins with a short introduction into the framework concepts and illustrates the general test automation for event sources
+        and sinks in the form of examples and live demos. In the end the audience should be able to accomplish automated integration tests for custom Kamelets that bind to messaging technologies such
+        as Knative, Http, and Apache Kafka.</p>
+    </div>
+  </div>
+  <hr>
+</section>
+
+<section class="intro">
+  <div class="grid">
+    <div class="unit whole align-center">
       <h1>Testing Camel K integrations with Cloud Native BDD</h1>
       <h2><small>Presentation from ApacheCon 2020</small></h2>
 
@@ -52,8 +71,6 @@ overview: true
   </div>
   <hr>
 </section>
-
-
 
 <section class="intro">
   <div class="grid">
