--- a/src/main/site/samples/index.html
+++ b/src/main/site/samples/index.html
@@ -30,7 +30,7 @@ name: sample-overview
       </thead>
       <tbody>
         {% assign sorted_posts = site.categories.samples | sort: 'group' %}
-        {% assign group = "none" %}
+        {% assign group = "common" %}
 
         {% for post in sorted_posts %}
         {% if group != post.group %}
@@ -54,10 +54,10 @@ name: sample-overview
         <tr>
           <td><a href="{{ post.permalink }}">{{ post.name }}</a></td>
           <td align="center">{{ post.description }}</td>
-          {% if post.group != "none" %}
+          {% if post.group != "common" %}
           <td align="center"><a href="https://github.com/citrusframework/citrus-samples/blob/master/{{ post.group }}/{{ post.name }}" target="_blank"><i class="fa fa-pencil"></i></a></td>
           {% endif %}
-          {% if post.group == "none" %}
+          {% if post.group == "common" %}
           <td align="center"><a href="https://github.com/citrusframework/citrus-samples/blob/master/{{ post.name }}" target="_blank"><i class="fa fa-pencil"></i></a></td>
           {% endif %}
         </tr>
