chore: Add DSL page

--- a/src/main/site/index.html
+++ b/src/main/site/index.html
@@ -46,7 +46,8 @@ overview: true
     </div>
     <div class="unit one-third">
       <h2><i class="fa fa-code"></i>&nbsp;Polyglot</h2>
-      <p>You can choose from a set of domain specific languages to write a Citrus test in Java, XML, YAML or as a Cucumber BDD feature.</p>
+      <p>You can choose from a set of domain specific languages to write a Citrus test in Java, XML, YAML or as a Cucumber BDD feature.<br>
+        <a class="prominent" href="/dsl/">&rarr; Domain Specific Languages</a></p>
     </div>
     <div class="unit one-third">
       <h2><img src="/img/icons/jbang.png"/>&nbsp;Try with JBang!</h2>
