chore: Add quickstart page

--- a/src/main/site/index.html
+++ b/src/main/site/index.html
@@ -171,7 +171,7 @@ overview: true
   <div class="grid">
     <div class="unit whole align-center">
       <h1>BDD Integration with Citrus & Cucumber</h1>
-      <h2><small>Citrus "Tools in action" session @DevoxxBE 2017</small></h2>
+      <h2><small>Citrus "Tools in action" session &#64;DevoxxBE 2017</small></h2>
 
       <iframe width="560" height="315" src="https://www.youtube.com/embed/X76Wz0MNdrc" frameborder="0" allowfullscreen></iframe>
 
@@ -188,7 +188,7 @@ overview: true
   <div class="grid">
     <div class="unit whole align-center">
       <h1>Citrus & Cucumber BDD</h1>
-      <h2><small>Citrus "Tools in action" session @DevoxxUS 2017</small></h2>
+      <h2><small>Citrus "Tools in action" session &#64;DevoxxUS 2017</small></h2>
 
       <iframe width="560" height="315" src="https://www.youtube.com/embed/jNgROZjI98Y" frameborder="0" allowfullscreen></iframe>
 
@@ -205,7 +205,7 @@ overview: true
   <div class="grid">
     <div class="unit whole align-center">
       <h1>Testing Microservices</h1>
-      <h2><small>Citrus "Tools in action" session @DevoxxBE 2015</small></h2>
+      <h2><small>Citrus "Tools in action" session &#64;DevoxxBE 2015</small></h2>
 
       <iframe width="560" height="315" src="https://www.youtube.com/embed/FPgXJveaLTo" frameborder="0" allowfullscreen></iframe>
 
