--- a/src/main/site/index.html
+++ b/src/main/site/index.html
@@ -14,6 +14,7 @@ overview: true
       Automated integration tests with a wide range of messaging protocols and data formats!</p>
 
       <a href="/docs/download" class="btn btn-release"><i class="fa fa-download"></i> Download &nbsp;v${citrus.version}</a>
+      <a href="/quickstart" class="btn btn-release"><i class="fa fa-verify"></i> Get started!</a>
     </div>
   </div>
 </section>
